<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EndGameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameoverTextView"
        android:text="@string/gameover"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginTop="58dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalScore"
        android:id="@+id/finalScoreTextView"
        android:textSize="30dp"
        android:layout_below="@+id/gameoverTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalScoreValueTextView"
        android:layout_below="@id/finalScoreTextView"
        android:text="@string/finalScoreValue"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginTop="66dp"
        />

</RelativeLayout>